...
        },
      })}>
      <Tab.Screen
        name="HKSupervisorDashboard"
        component={HKSupervisorDashboard}
        options={{
          tabBarLabel: 'Dashboard',
          tabBarAccessibilityLabel: 'Dashboard',
        }}
      />
      <Tab.Screen
        name="HKSupervisorRequests"
        component={HKSupervisorRequestsScreen}
        options={{
          tabBarLabel: 'Requests',
          tabBarAccessibilityLabel: 'Requests',
        }}
      />
      <Tab.Screen
        name="HKSupervisorChecklist"
        component={HKSupervisorChecklistScreen}
...
