...
        }}
      />
      <Tab.Screen
        name="RMSupervisorRequests"
        component={RMSupervisorRequestsScreen}
        options={{
          tabBarLabel: 'Requests',
          tabBarAccessibilityLabel: 'Requests',
        }}
      />
      <Tab.Screen
        name="RMSupervisorChecklist"
        component={SupervisorChecklistDetailScreen}
        options={{
          tabBarLabel: 'Checklist',
          tabBarAccessibilityLabel: 'Checklist',
        }}
      />
    </Tab.Navigator>
  );
};
...
